--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,19 @@
 Having issues with mobile safari/adblock browsers related to attachment-fixed/transform animations.  
 - Used media queries to allow transform animations for devices >= 800px.
+-- Update --
+This issue seems more complicated than I first thought.  The bug persists even without transform animations.  I need to test if it has actually has something to do with transition animations or if it's a bug more closely related to react-router.
+
+
 Back to top btn's icon position changed in mobile for some reason.
 - Added margin: 0 auto 5px to img.  Hopefully this will fix the issue?
+-- Update --
+Didn't work.  I'll probably have to connect an android device to debug things remotely...
+- Fixed? Changed img container padding to 0.
+
 Had issues with favicons not showing when run by python server.  
 - Fixed by moving icons to favicon folder and adding its directory to staticfile_dir?
+
+Android device has issues with bg height not spanning 100% of viewport.
+- Fixed by setting html height to 100vh.
+- Funny enough, android devices don't seem to have an issue with transition animations or the 'back to top arrow being offset' issue.
+
